# pokemon

./: .gitignore  Dockerfile  README.md  docker-compose.yml  init_root_user.py  manage.py  pyproject.toml
.github/workflows/: ci.yml
config/: settings.py  urls.py
pokedex/: admin.py  fight_logic.py  forms.py  models.py  tests.py  urls.py  utils.py  views.py
pokedex/migrations/: 0001_initial.py  0002_team.py  0003_alter_team_options_team_position_and_more.py  0004_alter_team_position.py  0005_remove_pokemoncapture_in_team.py
pokedex/templates/pokedex/: base.html  capture_detail.html  edit_profile.html  fights.html  index.html  pokemon.html  profile.html  team_edit.html  teams.html
pokedex/templates/registration/: login.html  signup.html
