[project]
name = "pokemon"
version = "0.1.0"
description = "Pokemon Game"
authors = [
    {name = "Wessim Harmel",email = "wessim.harmel1@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=6.0,<7.0)"
]

[tool.poetry.scripts]
manage = "manage:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
