[project]
name = "pokemon"
version = "0.1.0"
description = "Pokemon Game"
authors = [
    {name = "Wessim Harmel",email = "wessim.harmel1@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=6.0,<7.0)",
    "requests (>=2.32.5,<3.0.0)"
]

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.0"

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I"]


[tool.poetry]
package-mode = false

[tool.poetry.scripts]
manage = "manage:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
